--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -98,6 +98,20 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2024-12-31">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2024-12-31-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/8ce8bac85e567b50422ce5e1cbf7940c.webp" alt="12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2024-12-31-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、新加坡、日本、欧洲、美国、加拿大、香港等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2024-12-30">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2024-12-30-node-share-links.htm" class="xcblog-blog-url">
@@ -220,16 +234,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-30137.htm" title="学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）">学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）</a></li>
-                        <li class="py-2"><a href="/news/article-36328.htm" title="宠物领养网站论文绪论 宠物领养网站设计的需求调研">宠物领养网站论文绪论 宠物领养网站设计的需求调研</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-1-free-node-subscribe.htm" title="1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-23-node-share.htm" title="12月23日→22.9M/S|2024年最新免费节点V2rayU Node订阅链接地址">12月23日→22.9M/S|2024年最新免费节点V2rayU Node订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-35255.htm" title="狗粮批发厂家联系方式查询（狗粮厂家批发中心）">狗粮批发厂家联系方式查询（狗粮厂家批发中心）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-30-node-share-links.htm" title="12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-36437.htm" title="一片枫叶简笔画图片（一片枫叶图片唯美意境）">一片枫叶简笔画图片（一片枫叶图片唯美意境）</a></li>
-                        <li class="py-2"><a href="/news/article-30245.htm" title="宠物粮食品牌前十排名榜单 宠物粮食品牌前十排名榜单图片">宠物粮食品牌前十排名榜单 宠物粮食品牌前十排名榜单图片</a></li>
+                        <li class="py-2"><a href="/news/article-30724.htm" title="动物防疫疫苗管理要点包括什么和什么（动物防疫疫苗管理要点包括什么和什么两个方面）">动物防疫疫苗管理要点包括什么和什么（动物防疫疫苗管理要点包括什么和什么两个方面）</a></li>
                         <li class="py-2"><a href="/news/article-31163.htm" title="宠物粮怎么卖赚钱（做宠物粮生意赚钱吗）">宠物粮怎么卖赚钱（做宠物粮生意赚钱吗）</a></li>
-                        <li class="py-2"><a href="/news/article-36929.htm" title="领养宠物需要签协议吗合法吗 领养宠物需要签协议吗合法吗知乎">领养宠物需要签协议吗合法吗 领养宠物需要签协议吗合法吗知乎</a></li>
+                        <li class="py-2"><a href="/news/article-33096.htm" title="centos7-linux安装docker(离线方式)">centos7-linux安装docker(离线方式)</a></li>
+                        <li class="py-2"><a href="/news/article-35797.htm" title="东北农业大学兽医院电话是多少（东北农业大学兽医院电话是多少号）">东北农业大学兽医院电话是多少（东北农业大学兽医院电话是多少号）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-6-node-share.htm" title="1月6日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月6日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-38396.htm" title="动物注射疫苗简报内容范文怎么写（动物疫苗接种的注意事项包括有哪些内容）">动物注射疫苗简报内容范文怎么写（动物疫苗接种的注意事项包括有哪些内容）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-29-free-node-subscribe-links.htm" title="12月29日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">12月29日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-31678.htm" title="linux搭建NFS网络文件共享服务">linux搭建NFS网络文件共享服务</a></li>
+                        <li class="py-2"><a href="/news/article-31162.htm" title="兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）">兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）</a></li>
+                        <li class="py-2"><a href="/news/article-38395.htm" title="OpenSSL3.0.5安装">OpenSSL3.0.5安装</a></li>
                     </ul>
     </div>
 </div>
@@ -241,7 +255,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
